welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if(a< 10 ||a<b  ||a<c ){return true}
  else if(b< 10 ||b<a  ||b<c ){return true}
  else if(c< 10 ||c<b  ||c<a ){return true}
  else { }
}